public/stylesheets/top_up/style.css
.dragging {
  cursor: move !important; }

#tu_overlay,
.tu_top_up {
	top: 0px;
	left: 0px; }

#tu_overlay {
	width: 100%;
	height: 100%;
	position: fixed;
	z-index: 999; }

#temp_up {
  top: -9999px;
  z-index: -1; }

.tu_transparent {
  opacity: 0; }

.tu_shaded {
	opacity: .65;
	background: black; }

.tu_scrollable {
  overflow: auto; }

.tu_top_up {
	position: absolute;
	z-index: 1000; }
	
.tu_top_up a,
.tu_top_up a:hover {
  border: 0px; }

.tu_top_up .ui-resizable-se {
	position: absolute !important;
	background-color: transparent !important;
	border: 0px !important; }

.tu_wrapper {
	position: relative; }

.tu_title {
	width: 100%;
	color: white;
	font-family: "Lucida Grande", "Arial";
	font-size: 11px;
	position: absolute;
	text-align: center;
	z-index: 1001; }

.tu_frame,
#tu_center_wrapper {
	border-collapse: collapse; }

.tu_frame tr, .tu_frame td {
  margin: 0px;
  padding: 0px; }

.tu_frame .tu_left,
.tu_frame .tu_middle,
.tu_frame .tu_right, {
	padding: 0px; }

.tu_controls {
  position: absolute;
	z-index: 1001; }

.tu_close_link,
.tu_previous_link,
.tu_next_link {
	cursor: pointer; }

.tu_close_link {
	position: absolute;
	z-index: 1002; }

.tu_previous_link,
.tu_next_link {
	display: block;
	float: left; }

#tu_center_wrapper {
	position: absolute;
	z-index: 1000; }

#tu_loader {
  width: 100%;
  height: 100%;
  position: absolute;
	background: url(/images/top_up/loader.gif) no-repeat 50% 50%;
	z-index: 1003; }

